fix: SpaceCard title text align

--- a/src/components/SpaceCard/SpaceCard.module.css
+++ b/src/components/SpaceCard/SpaceCard.module.css
@@ -29,6 +29,7 @@
 }
 
 .title {
+  text-align: left;
   letter-spacing: initial;
   font-weight: 500;
 }
